--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
